kubernetes-files/ghost-blog/05-ghost-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-blog-service
  namespace: ghost-blog
spec:
  type: ClusterIP
  selector:
   app: ghost
  ports: 
    - name: ghost-ps
      port: 80
      targetPort: ghost-port
      protocol: TCP
