kubernetes-files/ghost-blog/06-ghost-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ghost-ingress
  namespace: ghost-blog
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: zabalnetes.es
    http:
      paths:
      - path: /
        backend:
          serviceName: ghost-blog-service
          servicePort: ghost-ps
